# mixxx

./: .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE  vcpkg.json
.github/workflows/: .build.yml.kate-swp  build.yml
cmake/: macos_build_environment
cmake/modules/: FindFdkAac.cmake  FindShout.cmake
packaging/windows/: build_environment
res/: mixxx.qrc
res/controllers/: Hercules P32 DJ.midi.xml  Hercules-P32-scripts.js  Traktor-Kontrol-S4-MK3.js  midi-components-0.0.js
res/skins/Deere/: deck_mixer_controls_col3.xml  effect_unit_no_parameters.xml  equalizer_rack_parameter_left.xml  equalizer_rack_parameter_right.xml  knob.xml  knob_toolbar.xml  knob_with_button_left.xml  knob_with_button_right.xml  knob_with_label.xml  mixer.xml  mixer_column_eq_left.xml  mixer_column_eq_right.xml  mixer_column_gain_levels.xml  mixer_column_volume.xml  quick_effect_superknob_left.xml  quick_effect_superknob_right.xml  skin.xml  skin_settings.xml  style.qss
src/: _version.h
src/controllers/: controller.cpp  controller.h
src/controllers/bulk/: bulkcontroller.cpp  bulkcontroller.h
src/controllers/hid/: hidcontroller.cpp
src/controllers/midi/: hss1394controller.cpp  hss1394controller.h  midicontroller.cpp  midicontroller.h  midiutils.cpp  midiutils.h  portmidicontroller.cpp  (+1 more)
src/effects/: effectsmanager.cpp
src/encoder/: encoder.cpp  encoderfdkaac.cpp  encoderfdkaac.h
src/skin/: skinloader.cpp
src/sources/: soundsourcemediafoundation.cpp  soundsourcesndfile.cpp
src/util/: semanticversion.h
tools/: macos_buildenv.sh  windows_buildenv.bat
(+18 files in other folders)
