[package]
name = "mixxx"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
path = ""

[dev-dependencies]
# sccache's handling of the /fp:fast MSVC compiler option is broken, but this is fixed in the master branch.
# https://github.com/mozilla/sccache/pull/962
sccache = { git = "https://github.com/mozilla/sccache.git", branch = "master" }
